src/test/ui/static/static-reference-to-fn-2.stderr
error[E0277]: expected a `std::ops::Fn<(&mut StateMachineIter<'a>,)>` closure, found `type StateMachineFunc`
  --> $DIR/static-reference-to-fn-2.rs:13:17
   |
LL |         return  (*self.statefn)(self);
   |                 ^^^^^^^^^^^^^^^^^^^^^ expected an `Fn<(&mut StateMachineIter<'a>,)>` closure, found `type StateMachineFunc`
   |
   = help: the trait `std::ops::Fn<(&mut StateMachineIter<'a>,)>` is not implemented for `type StateMachineFunc`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
